# sixel

./: go.mod  go.sum  justfile  libsixel.go  libsixel.h  libsixel_test.go
cmd/icat/: main.go
libsixel/: Cargo.toml
libsixel/src/: lib.rs  sixel.rs
