[package]
name = "libsixel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]


[dependencies]
image       = { version = "^0", features = ["gif"] }
color_quant = "^1"
anyhow      = "^1"
libc = "0.2.150"
